--- a/WebAdvertisements.Web/appsettings.json
+++ b/WebAdvertisements.Web/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "AWS": {
-    "Region": "ap-south-1",
+    "Region": "XXXUSE_YOUR_RegionXXXX",
     "UserPoolClientId": "XXXXXXXXUSE_YOUR_IDXXXXXXXXXXXX",
     "UserPoolClientSecret": "XXXXXXXXXXXXUSE_YOUR_IDXXXXXXXXXXXXXX",
     "UserPoolId": "XXXXXXXXXXXUSE_YOUR_IDXXXXXXXXXXXX"
